[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://objects/Player/player.svg" type="Texture" id=2]
[ext_resource path="res://objects/Player/Perticles/explote.svg" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.578947, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.596491, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Player" type="KinematicBody2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
position = Vector2( -16, -16 )
amount = 15
lifetime = 0.3
local_coords = false
emission_shape = 3
emission_points = PoolVector2Array( 1, 1, 1, 2, 1, 3, 1, 4, 2, 1, 2, 2, 2, 3, 2, 4, 2, 5, 3, 1, 3, 2, 3, 3, 3, 4, 3, 5, 3, 10, 3, 11, 3, 12, 3, 13, 3, 14, 3, 26, 3, 27, 3, 28, 3, 29, 3, 30, 4, 1, 4, 2, 4, 3, 4, 4, 4, 5, 4, 10, 4, 11, 4, 12, 4, 13, 4, 14, 4, 26, 4, 27, 4, 28, 4, 29, 4, 30, 5, 1, 5, 2, 5, 3, 5, 4, 5, 5, 5, 10, 5, 11, 5, 12, 5, 13, 5, 14, 5, 19, 5, 20, 5, 21, 5, 22, 5, 23, 5, 26, 5, 27, 5, 28, 5, 29, 5, 30, 6, 10, 6, 11, 6, 12, 6, 13, 6, 14, 6, 19, 6, 20, 6, 21, 6, 22, 6, 23, 6, 26, 6, 27, 6, 28, 6, 29, 6, 30, 7, 10, 7, 11, 7, 12, 7, 13, 7, 14, 7, 19, 7, 20, 7, 21, 7, 22, 7, 23, 7, 26, 7, 27, 7, 28, 7, 29, 7, 30, 8, 19, 8, 20, 8, 21, 8, 22, 8, 23, 9, 19, 9, 20, 9, 21, 9, 22, 9, 23, 12, 3, 12, 4, 12, 5, 12, 6, 12, 7, 13, 3, 13, 4, 13, 5, 13, 6, 13, 7, 13, 14, 13, 15, 13, 16, 13, 17, 14, 3, 14, 4, 14, 5, 14, 6, 14, 7, 14, 14, 14, 15, 14, 16, 14, 17, 14, 18, 14, 25, 14, 26, 14, 27, 14, 28, 14, 29, 15, 3, 15, 4, 15, 5, 15, 6, 15, 7, 15, 14, 15, 15, 15, 16, 15, 17, 15, 18, 15, 25, 15, 26, 15, 27, 15, 28, 15, 29, 16, 3, 16, 4, 16, 5, 16, 6, 16, 7, 16, 14, 16, 15, 16, 16, 16, 17, 16, 18, 16, 25, 16, 26, 16, 27, 16, 28, 16, 29, 17, 14, 17, 15, 17, 16, 17, 17, 17, 18, 17, 25, 17, 26, 17, 27, 17, 28, 17, 29, 18, 25, 18, 26, 18, 27, 18, 28, 18, 29, 21, 8, 21, 9, 21, 10, 21, 11, 21, 12, 22, 8, 22, 9, 22, 10, 22, 11, 22, 12, 23, 8, 23, 9, 23, 10, 23, 11, 23, 12, 23, 16, 23, 17, 23, 18, 23, 19, 23, 20, 24, 8, 24, 9, 24, 10, 24, 11, 24, 12, 24, 16, 24, 17, 24, 18, 24, 19, 24, 20, 24, 25, 24, 26, 24, 27, 24, 28, 24, 29, 25, 8, 25, 9, 25, 10, 25, 11, 25, 12, 25, 16, 25, 17, 25, 18, 25, 19, 25, 20, 25, 25, 25, 26, 25, 27, 25, 28, 25, 29, 26, 1, 26, 2, 26, 3, 26, 4, 26, 16, 26, 17, 26, 18, 26, 19, 26, 20, 26, 25, 26, 26, 26, 27, 26, 28, 26, 29, 27, 1, 27, 2, 27, 3, 27, 4, 27, 5, 27, 16, 27, 17, 27, 18, 27, 19, 27, 25, 27, 26, 27, 27, 27, 28, 27, 29, 28, 1, 28, 2, 28, 3, 28, 4, 28, 5, 28, 25, 28, 26, 28, 27, 28, 28, 28, 29, 29, 1, 29, 2, 29, 3, 29, 4, 29, 5, 30, 1, 30, 2, 30, 3, 30, 4, 30, 5 )
emission_colors = PoolColorArray(  )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
scale_amount = 7.0
color_ramp = SubResource( 5 )

[node name="DestroyParticles" type="CPUParticles2D" parent="."]
position = Vector2( -16, -16 )
emitting = false
amount = 20
lifetime = 1.2
one_shot = true
explosiveness = 1.0
local_coords = false
texture = ExtResource( 3 )
emission_shape = 3
emission_points = PoolVector2Array( 1, 1, 1, 2, 1, 3, 1, 4, 2, 1, 2, 2, 2, 3, 2, 4, 2, 5, 3, 1, 3, 2, 3, 3, 3, 4, 3, 5, 3, 10, 3, 11, 3, 12, 3, 13, 3, 14, 3, 26, 3, 27, 3, 28, 3, 29, 3, 30, 4, 1, 4, 2, 4, 3, 4, 4, 4, 5, 4, 10, 4, 11, 4, 12, 4, 13, 4, 14, 4, 26, 4, 27, 4, 28, 4, 29, 4, 30, 5, 1, 5, 2, 5, 3, 5, 4, 5, 5, 5, 10, 5, 11, 5, 12, 5, 13, 5, 14, 5, 19, 5, 20, 5, 21, 5, 22, 5, 23, 5, 26, 5, 27, 5, 28, 5, 29, 5, 30, 6, 10, 6, 11, 6, 12, 6, 13, 6, 14, 6, 19, 6, 20, 6, 21, 6, 22, 6, 23, 6, 26, 6, 27, 6, 28, 6, 29, 6, 30, 7, 10, 7, 11, 7, 12, 7, 13, 7, 14, 7, 19, 7, 20, 7, 21, 7, 22, 7, 23, 7, 26, 7, 27, 7, 28, 7, 29, 7, 30, 8, 19, 8, 20, 8, 21, 8, 22, 8, 23, 9, 19, 9, 20, 9, 21, 9, 22, 9, 23, 12, 3, 12, 4, 12, 5, 12, 6, 12, 7, 13, 3, 13, 4, 13, 5, 13, 6, 13, 7, 13, 14, 13, 15, 13, 16, 13, 17, 14, 3, 14, 4, 14, 5, 14, 6, 14, 7, 14, 14, 14, 15, 14, 16, 14, 17, 14, 18, 14, 25, 14, 26, 14, 27, 14, 28, 14, 29, 15, 3, 15, 4, 15, 5, 15, 6, 15, 7, 15, 14, 15, 15, 15, 16, 15, 17, 15, 18, 15, 25, 15, 26, 15, 27, 15, 28, 15, 29, 16, 3, 16, 4, 16, 5, 16, 6, 16, 7, 16, 14, 16, 15, 16, 16, 16, 17, 16, 18, 16, 25, 16, 26, 16, 27, 16, 28, 16, 29, 17, 14, 17, 15, 17, 16, 17, 17, 17, 18, 17, 25, 17, 26, 17, 27, 17, 28, 17, 29, 18, 25, 18, 26, 18, 27, 18, 28, 18, 29, 21, 8, 21, 9, 21, 10, 21, 11, 21, 12, 22, 8, 22, 9, 22, 10, 22, 11, 22, 12, 23, 8, 23, 9, 23, 10, 23, 11, 23, 12, 23, 16, 23, 17, 23, 18, 23, 19, 23, 20, 24, 8, 24, 9, 24, 10, 24, 11, 24, 12, 24, 16, 24, 17, 24, 18, 24, 19, 24, 20, 24, 25, 24, 26, 24, 27, 24, 28, 24, 29, 25, 8, 25, 9, 25, 10, 25, 11, 25, 12, 25, 16, 25, 17, 25, 18, 25, 19, 25, 20, 25, 25, 25, 26, 25, 27, 25, 28, 25, 29, 26, 1, 26, 2, 26, 3, 26, 4, 26, 16, 26, 17, 26, 18, 26, 19, 26, 20, 26, 25, 26, 26, 26, 27, 26, 28, 26, 29, 27, 1, 27, 2, 27, 3, 27, 4, 27, 5, 27, 16, 27, 17, 27, 18, 27, 19, 27, 25, 27, 26, 27, 27, 27, 28, 27, 29, 28, 1, 28, 2, 28, 3, 28, 4, 28, 5, 28, 25, 28, 26, 28, 27, 28, 28, 28, 29, 29, 1, 29, 2, 29, 3, 29, 4, 29, 5, 30, 1, 30, 2, 30, 3, 30, 4, 30, 5 )
emission_colors = PoolColorArray(  )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angular_velocity = 80.0
angular_velocity_random = 1.0
scale_amount = 2.0
color_ramp = SubResource( 10 )

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Coldown" type="Timer" parent="."]

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="Coldown" to="." method="_on_Coldown_timeout"]
